--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "bootstrap": "^4.1.1",
     "jquery": "^3.3.1",
+    "moment": "^2.22.2",
     "node-sass-chokidar": "^1.3.0",
     "npm-run-all": "^4.1.3",
     "popper.js": "^1.14.3",
