--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
+    "react-table": "^6.8.6",
     "reactstrap": "^6.2.0",
     "sass": "^1.8.0"
   },
