--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "popper.js": "^1.14.3",
     "prop-types": "^15.6.2",
     "react": "^16.4.1",
+    "react-datepicker": "^1.6.0",
     "react-dom": "^16.4.1",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
