--- a/package.json
+++ b/package.json
@@ -16,17 +16,17 @@
     "bootstrap": "^4.1.1",
     "jquery": "^3.3.1",
     "moment": "^2.22.2",
-    "node-sass-chokidar": "^1.3.0",
+    "node-sass-chokidar": "^1.3.4",
     "npm-run-all": "^4.1.3",
     "popper.js": "^1.14.3",
     "prop-types": "^15.6.2",
     "react": "^16.4.1",
     "react-datepicker": "^1.8.0",
     "react-dom": "^16.4.1",
-    "react-file-viewer": "^0.5.0",
+    "react-pdf": "^4.0.5",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "1.1.4",
+    "react-scripts": "^2.1.8",
     "react-spring": "^6.1.10",
     "react-table": "^6.8.6",
     "reactstrap": "^6.2.0",
